FIX: Add overflow auto on SSO container

--- a/src/ui/popover/popover-base/popover-base.component.css
+++ b/src/ui/popover/popover-base/popover-base.component.css
@@ -13,6 +13,7 @@
     margin:    0 auto;
     display: block; /* Hidden by default */
     position: fixed; /* Stay in place */
+    overflow: auto; /* Enable scroll if needed */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
